[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

# Flit Docs:
# https://flit.readthedocs.io/en/latest/pyproject_toml.html#metadata-section
[tool.flit.metadata]
module = "eunomia"
author = "Nathan Michlo"
author-email = "NathanJMichlo@gmail.com"
home-page = "https://github.com/nmichlo/eunomia"
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
requires = [
    "asteval == 0.9.21",
    "lark == 0.9.21",
    "ruamel.yaml == 0.16",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
]

[tool.flit.scripts]
test = "pytest:main"